# valunds

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml
apps/: __init__.py
apps/accounts/: apps.py  identity_providers.py  models.py  services.py  signals.py
apps/accounts/templates/accounts/components/: login_stack.html
apps/core/: __init__.py  urls.py  views.py
apps/passports/: apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/passports/templates/passports/components/: credential_badge.html
apps/passports/templates/passports/partials/: credential_list.html
apps/profiles/: __init__.py  models.py  selectors.py  services.py  urls.py  views.py
apps/profiles/templates/profiles/components/: identity_card.html
apps/profiles/templates/profiles/pages/: profile_edit.html
apps/profiles/templates/profiles/partials/: settings_form.html
backend/: requirements.txt
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/api/: urls.py
backend/apps/authn/: apps.py  social.py  urls.py  views.py
backend/apps/core/: __init__.py  admin.py  choices.py  exceptions.py  models.py  pagination.py  permissions.py  utils.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/cv/: apps.py
backend/apps/profiles/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/profiles/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py  test.py
frontend/: package.json  vite.config.ts
static/css/: index.css
templates/layouts/: app_shell.html  base.html
templates/pages/: dashboard.html
templates/shared/: footer.html  nav.html
tests/: test_ai_proxy.py  test_module_integrity.py  test_source_sanity.py
tests/e2e/: test_onboarding_flow.py
valund/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
valund/accounts/: apps.py  models.py
valund/bookings/: apps.py
valund/core/: ai_proxy.py  apps.py  models.py  urls.py
valund/passports/: __init__.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
