[project]
name = "valund"
version = "0.1.0"

description = "Nordic Competence Marketplace — High-Trust Infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.0",
  "django-environ>=0.11",
  "djangorestframework>=3.15",
  "django-htmx>=1.20",
  "psycopg[binary]>=3.2",
  "django-cors-headers>=4.4",
  "whitenoise[brotli]>=6.7",
  "celery[redis]>=5.4",

description = "Valund high-trust competence marketplace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.0,<6.0",
  "djangorestframework>=3.15,<4.0",
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "psycopg[binary]>=3.2,<4.0",

]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "django-stubs[compatible-mypy]>=5.1.0",
  "pre-commit>=4.0.0",

  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4", "SIM", "TCH", "ARG", "PTH"]
ignore = ["D100", "D104"]

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
exclude = ["^build/"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "valund.settings"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
