[project]
name = "valund"
version = "0.1.0"

description="Nordic Competence Marketplace — High-Trust Infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1",
  "djangorestframework>=3.15",
  "django-htmx>=1.21",
  "django-allauth[socialaccount,openidconnect]>=65.0.0",
  "social-auth-app-django>=5.4.0",
  "uvicorn[standard]>=0.32.0",
  "django-environ>=0.11",
  "psycopg[binary]>=3.2",
  "celery[redis]>=5.4",
  "whitenoise[brotli]>=6.7",
  "django>=5.0",
  "django-environ>=0.11",
  "djangorestframework>=3.15",
  "django-htmx>=1.20",
  "psycopg[binary]>=3.2",
  "django-cors-headers>=4.4",
  "whitenoise[brotli]>=6.7",
  "celery[redis]>=5.4",

description = "Valund high-trust competence marketplace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.0,<6.0",
  "djangorestframework>=3.15,<4.0",
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "psycopg[binary]>=3.2,<4.0",

]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "django-stubs[compatible-mypy]>=5.1.0",
  "djangorestframework-stubs>=3.15.0",
  "pre-commit>=4.0.0",
  "pre-commit>=4.0.0",

  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4", "SIM", "TCH", "ARG", "PTH"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
exclude = ["^build/"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.local"
django_settings_module = "valund.settings"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
