[project]
name = "valund"
version = "0.1.0"
description = "Nordic Competence Marketplace — High-Trust Enterprise Infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1",
  "djangorestframework>=3.15",
  "django-htmx>=1.21",
  "django-allauth[socialaccount,openidconnect]>=65.0",
  "uvicorn[standard]>=0.32",
  "django-environ>=0.11",
  "psycopg[binary]>=3.2",
  "celery[redis]>=5.4",
  "whitenoise[brotli]>=6.7",
  "django-cors-headers>=4.4",
]

[tool.uv]
package = false  # CRITICAL: Prevents the "Failed to build valund" error

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "django-stubs[compatible-mypy]>=5.1.0",
  "djangorestframework-stubs>=3.15.0",
  "pytest-django>=4.9.0",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4", "SIM", "TCH", "ARG", "PTH"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.12"
exclude = ["^build/", "migrations/"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.local"
